--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">NetworkedScoreTracker</string>
+    <string name="Title">Networked Score Tracker</string>
+    <string name="PlayerLabel">Player:</string>
+    <string name="PlayerHint">Player Name</string>
 </resources>
