New game screen now shows list of joined players, start game button does nothing.
Layout is terrible but works

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="JoinGame_button">Join Game</string>
     <string name="NewGameTitle_textView">New Game!</string>
     <string name="hostLabel">Host:</string>
-    <string name="startGameServerButton">Start!</string>
+    <string name="startGameServerButton">Start Game!</string>
+    <string name="joinedPlayersLabel">Joined Players:</string>
 </resources>
